welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:4: error: ';' expected but 'if' found.
	} if else (aSmile == false && bSmile == false) { return true }
          ^