welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
	if (aSmile == true && bSmile == true) {
		return true
	} if else (aSmile == false && bSmile == false) { return true }
	return false
}
